# cyberRange-env

./: .gitignore
company_it_env/: .dockerignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
company_it_env/outputs/evals/trajectories/: 0a5a70b1-4ffb-4a92-9de1-1f1e80c727f5.jsonl  348078a7-ac38-4719-83f7-032ae14c594a.jsonl  39611afe-1928-4723-ae3e-224e18b5f612.jsonl  3a69088f-c35a-45a2-a3fc-15732d503dd8.jsonl  6545a430-ce25-42a8-93c7-c36405334e81.jsonl  79de9e03-b13a-4e35-8873-4615cbd1004e.jsonl  82236527-c48a-4f4c-9685-bb40c2c4b7a6.jsonl  8a27c535-76f1-4605-adb3-ba3c352e0d0e.jsonl  90f533e1-de03-499f-88ee-a818308ab15a.jsonl  9603546d-d5b0-4a21-a3cb-034bb796d151.jsonl  b5148854-aac0-4994-8436-1a4582c37bca.jsonl  ce7abb7e-6f6d-45dc-889a-ae50066a6170.jsonl  d851b9e4-bb7f-4402-8862-2a7b9a194a17.jsonl  d9b40cfa-7f79-4174-8dca-058c64c7e6f9.jsonl
company_it_env/outputs/runtime/: helpdesk.db
company_it_env/scenario/k8s/: configmap-init-sql.yaml  helpdesk-web.yaml  ingress.yaml  internal-api.yaml  kustomization.yaml  namespace.yaml  postgres.yaml
company_it_env/scenario/sql/: init.sql
company_it_env/scenario/templates/k8s/: helpdesk-web.yaml  (+5 more)
company_it_env/server/: Dockerfile  __init__.py  app.py  cluster_layout.py  company_it_environment.py  controller.py  controller_service.py  kind_provisioner.py  lab_runtime.py  solver.py  trajectory_logger.py  validate_rl_readiness.py  web_ui.py
company_it_env/tests/: conftest.py  test_app.py  test_controller_service.py  test_environment.py  test_kind_provisioner.py  test_runtime_and_solver.py
(+15 files in other folders)
